Adicionar todo o projeto atualizado 2.0

--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-NG5XPSVL');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Powerbizz.ai - Revolucione Seu Negócio com Inteligência Artificial</title>
-    <meta name="description" content="Crie pessoas digitais inteligentes que transformam o atendimento ao cliente. Aumente conversões em até 300%, reduza custos em 70% e atenda 24/7 com nossa IA avançada." />
+
+    <!-- SEO BÁSICO -->
+    <title>Powerbizz.ai - Revolucione seu negócio com Inteligência Artificial</title>
+    <meta
+      name="description"
+      content="A Powerbizz.ai cria agentes digitais inteligentes que automatizam atendimento, vendas e operações com IA. Aumente conversões, reduza custos e escale seu negócio com automação e inteligência artificial."
+    />
     <meta name="author" content="Powerbizz.ai" />
-    <meta name="keywords" content="inteligência artificial, IA, chatbot, pessoas digitais, atendimento automatizado, conversão, vendas, WhatsApp Business, automação" />
+    <meta
+      name="keywords"
+      content="inteligência artificial, IA para empresas, pessoas digitais, agentes digitais de IA, automação com IA, assistentes virtuais para negócios, SDR digital, atendimento automatizado, vendas automatizadas, whatsapp com IA, integração CRM com IA, hubspot com inteligência artificial, eficiência operacional com IA, transformação digital, agente digital para indústrias, atendimento 24h com IA, chatbot inteligente, plataforma de IA no Brasil, trabalhador digital, IA para atendimento ao cliente"
+    />
     <link rel="canonical" href="https://powerbizz.ai" />
 
-    <meta property="og:title" content="Powerbizz.ai - Revolucione Seu Negócio com Inteligência Artificial" />
-    <meta property="og:description" content="Crie pessoas digitais inteligentes que transformam o atendimento ao cliente. Aumente conversões em até 300%, reduza custos em 70% e atenda 24/7." />
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="Powerbizz.ai - IA para empresas e automação inteligente" />
+    <meta
+      property="og:description"
+      content="Automatize seu atendimento e vendas com agentes digitais de IA. Aumente a eficiência e reduza custos com soluções inteligentes Powerbizz.ai."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://powerbizz.ai" />
     <meta property="og:site_name" content="Powerbizz.ai" />
@@ -19,36 +46,62 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="pt_BR" />
 
+    <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@powerbizz_ai" />
-    <meta name="twitter:title" content="Powerbizz.ai - Revolucione Seu Negócio com IA" />
-    <meta name="twitter:description" content="Pessoas digitais inteligentes que aumentam conversões em 300% e reduzem custos em 70%." />
+    <meta name="twitter:title" content="Powerbizz.ai - IA para empresas e automação inteligente" />
+    <meta
+      name="twitter:description"
+      content="Agentes digitais e automação com IA para revolucionar atendimento, vendas e operações."
+    />
     <meta name="twitter:image" content="https://powerbizz.ai/twitter-image.jpg" />
 
-    <!-- Structured Data -->
+    <!-- STRUCTURED DATA (Google JSON-LD) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "Powerbizz.ai",
-      "url": "https://powerbizz.ai",
-      "logo": "https://powerbizz.ai/logo.png",
-      "description": "Especialistas em criar pessoas digitais inteligentes com IA para revolucionar o atendimento ao cliente e aumentar conversões.",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+55-14-99766-5343",
-        "contactType": "Atendimento ao Cliente",
-        "availableLanguage": "Portuguese"
-      },
-      "sameAs": [
-        "https://wa.me/5514997665343"
-      ]
-    }
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Powerbizz.ai",
+        "url": "https://powerbizz.ai",
+        "logo": "https://powerbizz.ai/logo.png",
+        "description": "A Powerbizz.ai cria pessoas digitais inteligentes e soluções de automação com IA para empresas de todos os setores.",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+55-11-97446-7018",
+          "contactType": "Atendimento ao Cliente",
+          "availableLanguage": ["Portuguese", "English"]
+        },
+        "sameAs": [
+          "https://wa.me/5511974467018",
+          "https://www.linkedin.com/company/powerbizz-ai",
+          "https://www.instagram.com/powerbizz.ai"
+        ]
+      }
     </script>
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NG5XPSVL"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- HubSpot Embed -->
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js.hs-scripts.com/50233140.js"
+    ></script>
   </body>
 </html>
