--- a/index.html
+++ b/index.html
@@ -96,12 +96,23 @@
     <script type="module" src="/src/main.tsx"></script>
 
     <!-- HubSpot Embed -->
-    <script
-      type="text/javascript"
-      id="hs-script-loader"
-      async
-      defer
-      src="//js.hs-scripts.com/50233140.js"
-    ></script>
+    <script>
+      // Função para esconder o chat
+      function hideHubspotChat() {
+        const chat = document.getElementById('hubspot-messages-iframe-container');
+        if (chat) {
+          chat.style.setProperty('display', 'none', 'important');
+        }
+      }
+
+      // Tenta esconder a cada 500ms por alguns segundos
+      const hideInterval = setInterval(() => {
+        hideHubspotChat();
+      }, 500);
+
+      // Para após 10 segundos
+      setTimeout(() => clearInterval(hideInterval), 10000);
+    </script>
+
   </body>
 </html>
